# t4ac_msgs_ros

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
atomic_configure/: setup.sh
catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: t4ac_msgs.pc  t4ac_msgsConfig.cmake
catkin_generated/stamps/t4ac_msgs/: _setup_util.py.stamp
cmake/: t4ac_msgs-genmsg-context.py  t4ac_msgs-genmsg.cmake
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/t4ac_msgs/: BEV_detection.h  BEV_detections_list.h  BEV_tracker.h  BEV_trackers_list.h  Bounding_Box_2D.h  Bounding_Box_2D_list.h  Bounding_Box_3D.h  Bounding_Box_3D_list.h  CarControl.h  DM_path.h  DM_pose.h  DM_posestamped.h  GT_3D_Object.h  GT_3D_Object_list.h  Landmark.h  Lane.h  Location.h  MonitorizedLanes.h  MonitorizedRegElem.h  Node.h  Obstacle.h  Obstacles_list.h  Path.h  RegulatoryElement.h  Rotation.h  Traffic_Sign.h  Traffic_Sign_List.h  Transform.h  Way.h  Waypoint.h
devel/lib/pkgconfig/: t4ac_msgs.pc
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
msg/: BEV_detection.msg  BEV_detections_list.msg  Bounding_Box_3D.msg  Bounding_Box_3D_list.msg  GT_3D_Object.msg  Obstacle.msg  RegulatoryElement.msg  RegulatoryElementList.msg  Traffic_Sign.msg  Transform.msg  Waypoint.msg  bev_obstacles_list.msg  tracked_obstacles_list.msg
(+79 files in other folders)
